--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 NAUFAL DAFFA ZULYANZA_199707292025061003_MENYUSUN DRAF RANCANGAN AKTUALISASI_AGENDA IV_HARI 5.docx
+rancangan_aktualisasi/Zoom Meeting - KELAS B POK 1 (Letkol Lek Rizan Fadli, S.T., M.Han 2025-09-15 11-01-25.mp4
