--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 NAUFAL DAFFA ZULYANZA_199707292025061003_MENYUSUN DRAF RANCANGAN AKTUALISASI_AGENDA IV_HARI 5.docx
 rancangan_aktualisasi/Zoom Meeting - KELAS B POK 1 (Letkol Lek Rizan Fadli, S.T., M.Han 2025-09-15 11-01-25.mp4
+aktualisasi/NAUFAL DAFFA ZULYANZA_199707292025061003_MENYUSUN LAPORAN AKTUALISASI BENER.docx
+aktualisasi/frmt bab 4.docx
+aktualisasi/frmt bab 4.docx
