--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ rancangan_aktualisasi/Zoom Meeting - KELAS B POK 1 (Letkol Lek Rizan Fadli, S.T.
 aktualisasi/NAUFAL DAFFA ZULYANZA_199707292025061003_MENYUSUN LAPORAN AKTUALISASI BENER.docx
 aktualisasi/frmt bab 4.docx
 aktualisasi/frmt bab 4.docx
+aktualisasi/4b.txt
